# python-crud-fastapi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
