[tool.poetry]
name = "crud-fastapi"
version = "0.1.0"
description = ""
authors = ["Frank Chacon <frank.chacon@simterik.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
bcrypt = "^4.0.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
bcrypt = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
